--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,6 @@
     font-family: 'Inter';
     color: #fff;
     background-color: #2A2C2F;
-    max-width: 1280px;
+    max-width: 1280px;   
+    margin: auto; 
 }
