--- a/pages/index.css
+++ b/pages/index.css
@@ -27,8 +27,8 @@
 @import url(../blocks/places/__paragraph/places__paragraph.css);
 @import url(../blocks/places/__title/places__title.css);
 @import url(../blocks/places/__website/places__website.css);
-@import url();
-@import url();
+@import url(../blocks/lead/__image/lead__image-way.css);
+@import url(../blocks/lead/__images/lead__images.css);
 @import url();
 @import url();
 @import url();
