--- a/pages/index.css
+++ b/pages/index.css
@@ -29,8 +29,8 @@
 @import url(../blocks/places/__website/places__website.css);
 @import url(../blocks/lead/__image/lead__image-way.css);
 @import url(../blocks/lead/__images/lead__images.css);
-@import url();
-@import url();
+@import url(../blocks/intro/__list/intro__list-text.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url();
 @import url();
 @import url();
