--- a/blocks/lead/__images/lead__images.css
+++ b/blocks/lead/__images/lead__images.css
@@ -1,6 +1,8 @@
 .lead__images {
-    display: flex;    
+    display: flex;
+    flex-direction: column;
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    outline: red solid 1px;
 }
