--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,5 +1,5 @@
 .place {
     display: grid;
-    grid-template-rows: repeat(3, 33%);
+    grid-template-columns: 460px 460px;
     outline: red solid 1px;
 }
