--- a/pages/index.css
+++ b/pages/index.css
@@ -32,7 +32,7 @@
 @import url(../blocks/intro/__list/intro__list-text.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/places/place/place.css);
-@import url();
+@import url(../blocks/lead/__images/lead__image.css);
 @import url();
 @import url();
 @import url();
