--- a/blocks/places/__paragraph/place__paragraph.css
+++ b/blocks/places/__paragraph/place__paragraph.css
@@ -1,7 +1,10 @@
-.places__paragraph {
+.place__paragraph {
+    margin: 0;
+    padding: 0;    
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 163%;
     /* or 29px */
+    margin-bottom: 26px;
 }
