--- a/blocks/places/__website/place__link.css
+++ b/blocks/places/__website/place__link.css
@@ -3,7 +3,8 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    text-decoration: none;
+    text-decoration-line: underline; 
+    color: #fff;
     /* identical to box height, or 122% */
-    
+    margin-top: 12px;
 }
