--- a/blocks/places/__website/place__url-heading.css
+++ b/blocks/places/__website/place__url-heading.css
@@ -2,7 +2,8 @@
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
-    line-height: 12px;
-    /* identical to box height, or 100% */
-    letter-spacing: 2px;
+    line-height: 170%;
+    /* or 20px */    
+    letter-spacing: 2px;    
+    color: #AAAAAA;    
 }
