--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,5 +1,7 @@
 .place__website {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    text-decoration: none;
+    margin-top: 106px;    
 }
