--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,5 +1,8 @@
 .place {
     display: grid;
-    grid-template-columns: 460px 460px;
-    outline: red solid 1px;
+    grid-template: minmax(min-content, max-content) 1fr / 1fr 1fr;
+    justify-items: stretch;
+    align-items: flex-end;
+    margin-top: 80px;
+    gap: 48px 40px;
 }
