--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,4 +1,32 @@
 .cover__background {
     background-image: url(../../../images/cover-trains.jpg);
-    
+    width: 1184px;
+    height: 740px;
+    background-size: cover;
+    text-decoration: none;
+    color: #fff;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 92px;
+}
+
+.cover__background::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #2A2C2F;
+    opacity: 0.3;
+    z-index: -1;
+    transition: opacity 2s ease;
+}
+
+.cover__background:hover:after {
+    opacity: 0.8;
 }
