--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,4 +3,11 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
+    margin-right: 18px;
+    text-decoration: underline;
+}
+
+.header__lang-link:nth-last-of-type(1) {
+    margin-right: 0;
+    text-decoration: none;
 }
