--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,7 @@
     padding: 0;
     width: 1184px;
     height: 52px;
-    margin-top: 28px;
+    padding-top: 28px;
     margin-left: auto;
     margin-right: auto;    
 }
