--- a/blocks/intro/__paragraph/intro__paragraph.css
+++ b/blocks/intro/__paragraph/intro__paragraph.css
@@ -1,7 +1,10 @@
-.intro__subtitle {
+.intro_paragraph {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 163%;
     /* or 26px */
+    margin: 0;
+    margin-top: 40px;
+    margin-bottom: 33px;
 }
