--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,5 +4,6 @@
     display: flex;
     flex-direction: column;
     margin-left: 148px;
-    margin-right: 148px;    
+    margin-right: 148px;
+    margin-top: 12px;
 }
