--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,3 +8,27 @@
     gap: 16px 16px;    
     justify-content: center;
 }
+
+@media (max-width: 1023px) {
+    .photo-grid {
+        gap : 14px 14px;
+        grid-template-columns: repeat(3, 300px);
+        grid-template-rows: repeat(4, 225px);
+    }
+}
+
+@media (max-width: 767px) {
+    .photo-grid {
+        gap: 16px 16px;
+        grid-template-columns: repeat(2, 352px);
+        grid-template-rows: repeat(6, 264px);
+    }
+}
+
+@media (max-width: 319px) {
+    .photo-grid {
+        gap: 12px;
+        grid-template-columns: repeat(1, 288px);
+        grid-template-rows: repeat(12, 216px);
+    }
+}
