--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -5,3 +5,28 @@
     margin-top: 80px;
     gap: 48px 40px;
 }
+
+@media(max-width: 1023px) {
+    .place {
+        gap: 48px 32px;
+        grid-template-rows: 440px 440px; 
+    }
+}
+
+@media(max-width: 767px) {
+    .place {
+        gap: 48px 28px;
+        grid-template-columns: min-content 1fr;
+        grid-template-rows: min-content 340px; 
+        margin-top: 73px;
+    }
+}
+
+@media(max-width: 319px) {
+    .place {
+        gap: 32px;
+        grid-template-columns: min-content;
+        grid-template-rows: min-content; 
+        margin-top: 50px;
+    }
+}
