--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,3 +7,27 @@
     margin-right: 148px;
     margin-top: 12px;
 }
+
+@media (max-width: 1023px) {
+    .places {
+        margin-left: 48px;
+        margin-right: 48px;
+        margin-top: 12px;
+    }
+}
+
+@media (max-width: 767px) {
+    .places {
+        margin-left: 24px;
+        margin-right: 24px;
+        margin-top: 8px;
+    }
+}
+
+@media (max-width: 319px) {
+    .places {
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: -16px;
+    }
+}
