--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,3 +10,9 @@
     margin-left: 48px;
     margin-right: 48px;
 }
+
+@media (max-width: 1024px) {
+    .footer {
+        min-width: 928px;
+    }
+}
