--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,3 +7,10 @@
     margin-right: 442px;
     margin-top: 92px;
 }
+
+@media (max-width: 1024px) {
+    .intro {
+        margin-left: 48px;
+        margin-right: 286px;
+    }
+}
