--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,3 +8,9 @@
     margin-top: 56px;
     align-items: center;
 }
+
+/* @media (max-width: 1024px) {
+    .lead {
+        margin-top: ;
+    }
+} */
