--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,5 +1,9 @@
 .header__lang-links {
     margin: 0;
-    margin-top: 6px;
-    margin-bottom: 18px;
+}
+
+@media (max-width: 1024px) {
+    .header__lang-links {
+        margin-right: 48px;
+    }
 }
