--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,3 +5,21 @@
     max-width: 1280px;   
     margin: auto; 
 }
+
+@media (max-width: 1024px) {
+    .page {
+        max-width: 1024px;
+    }
+}
+
+@media (max-width: 768px) {
+    .page {
+        max-width: 768px;
+    }
+}
+
+@media (max-width: 320px) {
+    .page {
+        max-width: 320px;
+    }    
+}
