--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -6,14 +6,14 @@
     gap: 48px 40px;
 }
 
-@media(max-width: 1023px) {
+@media(max-width: 1024px) {
     .place {
         gap: 48px 32px;
-        grid-template-rows: 440px 440px; 
+        grid-template-rows: min-content 440px; 
     }
 }
 
-@media(max-width: 767px) {
+@media(max-width: 768px) {
     .place {
         gap: 48px 28px;
         grid-template-columns: min-content 1fr;
@@ -22,7 +22,7 @@
     }
 }
 
-@media(max-width: 319px) {
+@media(max-width: 320px) {
     .place {
         gap: 32px;
         grid-template-columns: min-content;
